<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dimGrey"
    tools:context=".Activities.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/bg_layer1_white"
        app:tint="@color/lightGrey"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/selectCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>


    <AutoCompleteTextView
        android:id="@+id/selectDepartureCity"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:hint="@string/departureCity"
        android:padding="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <AutoCompleteTextView
        android:id="@+id/selectArrivalCity"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/arrivalCity"
        android:padding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDepartureCity" />

    <TextView
        android:id="@+id/selectDate"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:hint="@string/selectDate"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectArrivalCity"/>

    <TextView
        android:id="@+id/searchBtn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/searchSeat"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDate"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>