<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BookTicket">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/bg_layer1_white"
        app:tint="@color/lightGrey"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/noOfSeatsText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="available seats: "
        android:maxWidth="100dp"
        android:gravity="end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textColor="@color/grey"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/noOfSeats"/>

    <TextView
        android:id="@+id/noOfSeats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="21212"
        android:maxWidth="100dp"
        android:gravity="start"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/noOfSeatsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/noOfSeatsText"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kr 50"
        android:textSize="80sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noOfSeatsText"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="5dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <View
                android:id="@+id/view1"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/lightGrey"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="@id/ArrivalCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/view2"
                app:layout_constraintTop_toTopOf="@id/departureCity"/>

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/lightGrey"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="@id/ArrivalCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view1"
                app:layout_constraintTop_toTopOf="@id/departureCity"/>

            <TextView
                android:id="@+id/departureCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lahore"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/view1"/>

            <ImageView
                android:id="@+id/dropDownImage"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/down_black_icon"
                app:layout_constraintTop_toBottomOf="@id/departureCity"
                app:layout_constraintStart_toStartOf="@id/departureCity"
                app:layout_constraintEnd_toEndOf="@id/departureCity"/>

            <TextView
                android:id="@+id/ArrivalCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Islamabad"
                android:maxWidth="100dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/dropDownImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/view1"/>


            <TextView
                android:id="@+id/departureTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/departureTime"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/view1"
                app:layout_constraintStart_toEndOf="@id/view1"
                app:layout_constraintEnd_toStartOf="@id/view2"/>

            <TextView
                android:id="@+id/departureTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/departureTime"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/departureTimeText"
                app:layout_constraintStart_toEndOf="@id/view1"
                app:layout_constraintEnd_toStartOf="@id/view2"/>

            <TextView
                android:id="@+id/arrivalTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/arrivalTime"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/view2"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/arrivalTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/departureTime"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/arrivalTimeText"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/addSeatBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add_icon"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_black_ring"
        app:layout_constraintTop_toBottomOf="@id/detailLay"
        app:layout_constraintEnd_toEndOf="@id/detailLay"/>

    <TextView
        android:id="@+id/seatCount"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="1"
        android:background="@drawable/edit_text_background"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/addSeatBtn"
        app:layout_constraintTop_toTopOf="@id/addSeatBtn"
        app:layout_constraintEnd_toStartOf="@id/addSeatBtn" />

    <TextView
        android:id="@+id/priceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kr 0"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/seatCount"
        app:layout_constraintTop_toBottomOf="@id/seatCount"
        app:layout_constraintEnd_toEndOf="@id/seatCount"/>

    <ImageView
        android:id="@+id/removeSeatBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/minus_icon"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/round_black_ring"
        app:layout_constraintTop_toTopOf="@id/addSeatBtn"
        app:layout_constraintBottom_toBottomOf="@id/addSeatBtn"
        app:layout_constraintEnd_toStartOf="@id/seatCount"/>

    <TextView
        android:id="@+id/bookBtn"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/bookTicket"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addSeatBtn"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>